--- a/demo/demo.html
+++ b/demo/demo.html
@@ -1,11 +1,11 @@
 <html>
 	<head>
 		<title>Scrollbar</title>
-		<link type="text/css" rel="stylesheet" href="../ui.scrollbar.css"></script>
+		<link type="text/css" rel="stylesheet" href="./ui.scrollbar.min.css"></script>
 		<link type="text/css" rel="stylesheet" href="./demo.css" />
 		<script type="text/javascript" src="./jquery-1.6.2.min.js"></script>
 		<script type="text/javascript" src="./jquery-ui-1.8.16.custom.min.js"></script>
-		<script type="text/javascript" src="../jquery.scrollbar.js"></script>
+		<script type="text/javascript" src="./jquery.scrollbar.min.js"></script>
 		<script type="text/javascript" src="./demo.js"></script>
 	</head>
 	<body>
@@ -32,7 +32,12 @@
 		
 			<p class="listTitle">ScrollTo</p>
 			<div class="scrollBox"><div id="scroll7"><p class="left" id="p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacinia viverra erat, id scelerisque neque gravida quis. Suspendisse potenti. Curabitur bibendum, turpis at ultrices dictum, leo nisi venenatis quam, vitae porttitor nibh urna ut lectus. Donec ut purus eget elit ullamcorper adipiscing id non dolor. Proin a mi ut urna porta tincidunt at sed velit. Proin porttitor mattis scelerisque. Aliquam erat volutpat. Mauris tristique interdum ante, eu rhoncus neque hendrerit sit amet. Sed vel risus risus. Duis pulvinar ultrices eros blandit tempor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi cursus elit non sem venenatis venenatis blandit felis tincidunt. Aliquam erat volutpat. Phasellus semper egestas nisl vitae ornare.</p><p class="left" id="p2">Fusce suscipit mollis justo at malesuada. Mauris eu lectus eget ante semper accumsan. Nulla sagittis bibendum pellentesque. Praesent blandit feugiat odio, in adipiscing purus posuere id. Nunc elit dolor, tempor sed rutrum ut, scelerisque at dolor. Donec tortor purus, tristique at porta sed, facilisis nec dolor. Nullam diam odio, posuere at lacinia vitae, congue et ligula. Suspendisse potenti. In eu ligula tellus. Aenean enim est, malesuada at ultricies non, dictum non est.</p><p class="left" id="p3">Fusce suscipit mollis justo at malesuada. Mauris eu lectus eget ante semper accumsan. Nulla sagittis bibendum pellentesque. Praesent blandit feugiat odio, in adipiscing purus posuere id. Nunc elit dolor, tempor sed rutrum ut, scelerisque at dolor. Donec tortor purus, tristique at porta sed, facilisis nec dolor. Nullam diam odio, posuere at lacinia vitae, congue et ligula. Suspendisse potenti. In eu ligula tellus. Aenean enim est, malesuada at ultricies non, dictum non est.</p></div></div>
-		
+			<br />
+			<span class="lightgrey actions" id="scrollToTop">Scroll to top -</span>
+			<span class="lightgrey actions" id="scrollTo30px50px">Scroll to [30,50] -</span>
+			<span class="lightgrey actions" id="scrollToP2">Scroll to #p2 -</span>
+			<span class="lightgrey actions" id="scrollToP3">Scroll to $("#scroll7 #p3")</span>
+			
 		</div>
 		<div id="footer">
 			<h3>jQuery Scrollbar</h3>
